--- a/All tasks/Mini-projeto 2/estilo/style.css
+++ b/All tasks/Mini-projeto 2/estilo/style.css
@@ -1,17 +1,22 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+BE+WAL:wght@100..400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Moderustic:wght@300..800&family=Playwrite+BE+WAL:wght@100..400&family=Qwitcher+Grypen:wght@400;700&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
 * {
     margin: 0;
     padding: 0;
 }
 
-:root {}
+:root {
+    --fonte1: Arial, sans-serif, Geneva;
+    --fonte2: "Playwrite BE WAL", Arial;
+    --fonte3: "Moderustic";
+}
 
 html,
 body {
     min-height: 100%;
     background-color: darkgray;
-
 }
 
 header {
@@ -19,16 +24,22 @@ header {
     padding: 10px;
     color: aliceblue;
     text-align: center;
+
 }
 
 header>h1 {
     padding-top: 40px;
     font-variant: small-caps;
+    font-family: var(--fonte3);
+    font-weight: bolder;
+    font-size: 10vw;
 }
 
 header>p {
     color: aliceblue;
     padding-bottom: 40px;
+    font-family: var(--fonte3);
+
 }
 
 a {
@@ -42,10 +53,14 @@ a:hover {
 }
 
 section {
+    font-family: var(--fonte2);
     padding-top: 10vh;
     padding-bottom: 10vh;
     line-height: 2em;
-    padding-left: 30px;
+    padding-left: 60px;
+    font-size: 2.6vw;
+    font-style: normal;
+    font-weight: 400;
 }
 
 
@@ -61,7 +76,8 @@ section.image {
 
 section.image>p {
     background-color: rgba(0, 0, 0, 0.347);
-    width: 400px;
+    display: inline-block;
+    padding: 12px;
 }
 
 footer {
